# pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  capitalize_comments.py  pyproject.toml
hooks/: capitalize_comments.py
